// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/component/kanban/kanban do not return a kanban with groupByProperty undefined 1`] = `
<div>
  <div />
</div>
`;

exports[`src/component/kanban/kanban return kanban and change title on KanbanColumnHeader 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="true"
        style="opacity: 1;"
      >
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="New Q1"
            value="New Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            <span>
              2
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="true"
        style="opacity: 1;"
      >
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
            value="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            <span>
              1
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          <span>
            + Add a group
          </span>
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <button
          type="button"
        >
          <span>
            + New
          </span>
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <button
          type="button"
        >
          <span>
            + New
          </span>
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
          </div>
          <button
            type="button"
          >
            <span>
              0
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/component/kanban/kanban return kanban and click on KanbanCalculationMenu 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="true"
        style="opacity: 1;"
      >
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q1"
            value="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            <span>
              2
            </span>
          </button>
          <div
            class="CalculationOptions css-b62m3t-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-2-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="CalculationOptions__control CalculationOptions__control--menu-is-open css-1s59geg-Control"
            >
              <div
                class="CalculationOptions__value-container CalculationOptions__value-container--has-value css-1mxrbau-ValueContainer"
              >
                <div
                  class="CalculationOptions__single-value css-1qlwihv-singleValue"
                >
                  Count
                </div>
                <input
                  aria-autocomplete="list"
                  aria-controls="react-select-2-listbox"
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-owns="react-select-2-listbox"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-2-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="CalculationOptions__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <div
                  aria-hidden="true"
                  class="CalculationOptions__indicator CalculationOptions__clear-indicator css-tpaeio-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                    />
                  </svg>
                </div>
                <span
                  class="CalculationOptions__indicator-separator css-43ykx9-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="CalculationOptions__indicator CalculationOptions__dropdown-indicator css-wpsttr-indicatorContainer"
                >
                  <i
                    class="CompassIcon icon-chevron-up ChevronUpIcon"
                  />
                </div>
              </div>
            </div>
            <div
              class="CalculationOptions__menu css-1rsmi4x-menu"
              id="react-select-2-listbox"
            >
              <div
                class="CalculationOptions__menu-list css-g29tl0-MenuList"
              >
                <div
                  class="KanbanCalculationOptions_CustomOption active"
                >
                  <span>
                    Count
                     
                  </span>
                </div>
                <div
                  class="KanbanCalculationOptions_CustomOption "
                >
                  <span>
                    Count Empty
                     
                    <i
                      class="CompassIcon icon-chevron-right ChevronRightIcon"
                    />
                  </span>
                </div>
                <div
                  class="KanbanCalculationOptions_CustomOption "
                >
                  <span>
                    Count Not Empty
                     
                    <i
                      class="CompassIcon icon-chevron-right ChevronRightIcon"
                    />
                  </span>
                </div>
                <div
                  class="KanbanCalculationOptions_CustomOption "
                >
                  <span>
                    Percent Empty
                     
                    <i
                      class="CompassIcon icon-chevron-right ChevronRightIcon"
                    />
                  </span>
                </div>
                <div
                  class="KanbanCalculationOptions_CustomOption "
                >
                  <span>
                    Percent Not Empty
                     
                    <i
                      class="CompassIcon icon-chevron-right ChevronRightIcon"
                    />
                  </span>
                </div>
                <div
                  class="KanbanCalculationOptions_CustomOption "
                >
                  <span>
                    Count Value
                     
                    <i
                      class="CompassIcon icon-chevron-right ChevronRightIcon"
                    />
                  </span>
                </div>
                <div
                  class="KanbanCalculationOptions_CustomOption "
                >
                  <span>
                    Count Unique Values
                     
                    <i
                      class="CompassIcon icon-chevron-right ChevronRightIcon"
                    />
                  </span>
                </div>
              </div>
            </div>
            <input
              name="calculation_options"
              type="hidden"
              value="count"
            />
          </div>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="true"
        style="opacity: 1;"
      >
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
            value="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            <span>
              1
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          <span>
            + Add a group
          </span>
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <button
          type="button"
        >
          <span>
            + New
          </span>
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <button
          type="button"
        >
          <span>
            + New
          </span>
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
          </div>
          <button
            type="button"
          >
            <span>
              0
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/component/kanban/kanban should match snapshot 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="true"
        style="opacity: 1;"
      >
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q1"
            value="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            <span>
              2
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="true"
        style="opacity: 1;"
      >
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
            value="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            <span>
              1
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          <span>
            + Add a group
          </span>
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <button
          type="button"
        >
          <span>
            + New
          </span>
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <button
          type="button"
        >
          <span>
            + New
          </span>
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
          </div>
          <button
            type="button"
          >
            <span>
              0
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/component/kanban/kanban should match snapshot without permissions 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="false"
        style="opacity: 1;"
      >
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable readonly "
            placeholder="New Select"
            readonly=""
            spellcheck="true"
            title="Q1"
            value="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            <span>
              2
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        draggable="false"
        style="opacity: 1;"
      >
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable readonly "
            placeholder="New Select"
            readonly=""
            spellcheck="true"
            title="Q2"
            value="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            <span>
              1
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard false"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu "
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
          </div>
          <button
            type="button"
          >
            <span>
              0
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
